--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: install gnuplot
       run: sudo apt-get update && sudo apt-get install -y gnuplot
-    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add rustfmt && rustup component add clippy
     - name: Cargo fmt
       uses: actions-rs/cargo@v1
       with:
