Try to fix codecov and coveralls

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, staging, trying ]
   pull_request:
     branches: [ main ]
 
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: install gnuplot
       run: sudo apt-get update && sudo apt-get install -y gnuplot
-    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add rustfmt && rustup component add clippy
+    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }} && rustup component add rustfmt clippy
     - name: Cargo fmt
       uses: actions-rs/cargo@v1
       with:
@@ -38,11 +38,12 @@ jobs:
       with:
         command: clippy
         args: --all -- -D warnings
+    - uses: taiki-e/install-action@nextest
     - name: Run tests
       uses: actions-rs/cargo@v1
       with:
-        command: test
-        args: --release --verbose
+        command: nextest
+        args: run --release --verbose
     - name: Run bench
       uses: actions-rs/cargo@v1
       with:
@@ -53,8 +54,18 @@ jobs:
         command: doc
         args: --release --all --verbose
     - uses: actions/checkout@master
+    - name: run cargo tarpaulin
+      uses: actions-rs/tarpaulin@v0.1
+      with:
+          version: '0.19.1'
+          args: '--release --verbose --output-dir coverage --out Lcov'
     - uses: codecov/codecov-action@v2
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v1
+      with:
+        name: code-coverage-report
+        path: coverage/lcov.info
