5 keywords max for a crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Incremental PEG parser Rust library"
 documentation = "https://docs.rs/ripeg"
 edition = "2021"
 homepage = "https://lwandrebeck.github.io/ripeg/"
-keywords = ["grammar", "packrat", "parse", "parser", "parsing", "peg"]
+keywords = ["grammar", "packrat", "parser", "parsing", "peg"]
 license = "GPL-3.0-or-later"
 name = "ripeg"
 readme = "README.md"
